--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.295",
     "react-tsparticles": "^2.12.2",
