--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.8",
     "@tabler/icons-react": "^3.33.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
