--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.12.2",
+    "ip2location-nodejs": "^9.6.3",
     "motion": "^12.12.1",
     "next": "15.3.2",
     "react": "^19.0.0",
